--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION dep1 dep2 ...
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pygraphblas pyformlang pytest
   - conda activate test-environment
   - bash install.sh
 script:
