--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
+  - conda config --add channels conda-forge
+  - conda install pygraphblas
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pygraphblas pyformlang pytest
   - conda activate test-environment
-  - bash install.sh
+  - pip install -r requirements.txt
 script:
   - pytest -v -s
