--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
   - conda info -a
   - conda config --add channels conda-forge
   - conda install pygraphblas
-  - pip install -r requirements.txt
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pygraphblas pyformlang pytest
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pygraphblas pytest
   - conda activate test-environment
+  - pip install -r requirements.txt
 
 script:
   - pytest -v -s
