--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,19 @@ language: python
 python:
   - "3.8"
 install:
-  - bash install.sh
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+    # Useful for debugging any issues with conda
+  - conda info -a
+  - conda config --add channels conda-forge
+  - conda create -q -n graph-database-environment
+  - conda activate graph-database-environment
+  - conda install pygraphblas
+  - pip install -r requirements.txt
 
 script:
-  - conda activate graph-database-environment
   - pytest -v -s
