--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - bash miniconda.sh -b -p $HOME/miniconda
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
   - hash -r
-  - conda config --set always_yes yes --set changeps1 no
+  - conda config --set always_yes yes --set changeps1 yes
   - conda update -q conda
     # Useful for debugging any issues with conda
   - conda info -a
@@ -17,4 +17,4 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest -v -s
+  - python3 -m pytest -v -s
