--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,24 @@
 language: python
-python:
-  - "3.8"
-install:
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - source "$HOME/miniconda/etc/profile.d/conda.sh"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 yes
-  - conda update -q conda
-    # Useful for debugging any issues with conda
-  - conda info -a
-  - conda config --add channels conda-forge
-  - conda create -q -n graph-database-environment
-  - conda activate graph-database-environment
-  - conda install pygraphblas
-  - pip install -r requirements.txt
-
-script:
-  - python3 -m pytest -v -s
+cache: pip
+jobs:
+  include:
+    - stage: "Test in Linux"
+      os: linux
+      python: "3.8.0"
+      script:
+        - bash install.sh
+        - python3 -m pytest -v -s
+    - stage: "Test in macOS"
+      os: osx
+      osx_image: xcode12u
+      language: shell
+      script:
+        - bash install.sh
+        - python3 -m pytest -v -s
+    - stage: "Test in Docker"
+      services:
+        - docker
+      python: "3.8.0"
+      script:
+        - docker build -t graph-database .
+        - docker run -it --rm -v "$PWD":/graph-database graph-database python3 -m pytest -v -s
