First try to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,6 @@
 language: python
-cache: pip
 jobs:
   include:
-    - stage: "Test in Linux"
-      os: linux
-      python: "3.8.0"
-      script:
-        - bash install.sh
-        - python3 -m pytest -v -s
-    - stage: "Test in macOS"
-      os: osx
-      osx_image: xcode12u
-      language: shell
-      script:
-        - bash install.sh
-        - python3 -m pytest -v -s
     - stage: "Test in Docker"
       services:
         - docker
@@ -22,3 +8,18 @@ jobs:
       script:
         - docker build -t graph-database .
         - docker run -it --rm -v "$PWD":/graph-database graph-database python3 -m pytest -v -s
+    - stage: "Test in Linux"
+      os: linux
+      python: "3.8.0"
+      script:
+        - bash install.sh
+        - conda activate test-environment || activate test-environment
+        - python3 -m pytest -v -s
+    - stage: "Test in macOS"
+      os: osx
+      osx_image: xcode12u
+      language: shell
+      script:
+        - bash install.sh
+        - conda activate test-environment || activate test-environment
+        - python3 -m pytest -v -s
