--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+cache: pip
 jobs:
   include:
     - stage: "Test in Docker"
@@ -13,7 +14,7 @@ jobs:
       python: "3.8.0"
       script:
         - bash install.sh
-        - conda activate test-environment || activate test-environment
+        - bash conda activate test-environment || bash activate test-environment
         - python3 -m pytest -v -s
     - stage: "Test in macOS"
       os: osx
