--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
       os: linux
       python: "3.8.0"
       script:
-        - sudo ./install.sh
+        - bash install.sh
         - sudo conda activate test-environment || bash activate test-environment
         - pytest -v -s
     - stage: "Test in macOS"
