--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,29 @@ language: python
 cache: pip
 jobs:
   include:
-    - stage: "Test in Docker"
+    - name: "Test in Docker"
       services:
         - docker
       python: "3.8.0"
       script:
         - docker build -t graph-database .
         - docker run -it --rm -v "$PWD":/graph-database graph-database python3 -m pytest -v -s
-    - stage: "Test in Linux"
+    - name: "Test in Linux"
       os: linux
       python: "3.8.0"
       language: bash
       script:
         - bash install.sh
-    - stage: "Test in macOS"
+    - name: "Test in macOS"
       os: osx
       osx_image: xcode12u
       language: shell
       script:
         - bash install.sh
+    - name: "Benchmark RPQ in Linux"
+      os: linux
+      python: "3.8.0"
+      language: bash
+      script:
+        - bash install.sh
+        - bash benchmark_rpq.sh
