--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,9 @@ jobs:
       language: shell
       script:
         - bash install.sh
+    - name: "Benchmark in Docker"
+      services:
+        - docker
+      python: "3.8.0"
+      script:
+        - docker run -it --rm -p 8787:8787 viabzalov/pygraphblas-database:latest python3 -m pytest -v -s benchmarks/benchmark_rpq/test_benchmark_rpq.py
